# itunes_organiser

./: .env_example  .gitignore  Dockerfile  docker-compose.yml  init.sql  log.txt  nginx.conf  pyproject.toml  tree.txt
src/: scripts.py
src/frontend/: app.js  index.html
src/itunes_library_manager/: __init__.py  api.py  database.py  itunes_manager.py  main.py  models.py  schemas.py  tasks.py
src/tests/: test_itunes_library_manager.py
