[tool.poetry]
name = "itunes-organiser"
version = "0.1.0"
description = ""
authors = ["Renier Botha <r.botha91@gmail.com>"]
readme = "README.md"
packages = [{include = "itunes_organiser"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
prettytable = "^3.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
